--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,16 @@
         "php": ">=5.4.0",
         "composer/installers": "*"
     },
+    "require-dev": {
+        "heystack/heystack": "dev-develop",
+        "heystack/ecommerce-core": "dev-develop",
+        "silverstripe/sapphire": "2.4.7"
+    },
     "autoload": {
         "psr-0": {
             "Heystack": "code/"
-        }
+        },
+        "classmap": ["sapphire/"]
     },
     "minimum-stability": "dev"
 }
