--- a/config/dps_services.yml
+++ b/config/dps_services.yml
@@ -4,6 +4,7 @@ parameters:
   pxfusion_input_processor.class: Heystack\Subsystem\Payment\DPS\PXFusion\InputProcessor
   pxfusion_output_processor.class: Heystack\Subsystem\Payment\DPS\PXFusion\OutputProcessor
   pxfusion_subscriber.class: Heystack\Subsystem\Payment\DPS\PXFusion\Subscriber
+  pxfusion_payment_response.class: Heystack\Subsystem\Payment\DPS\PXFusion\PaymentResponse
 
   pxpost_service.class: Heystack\Subsystem\Payment\DPS\PXPost\Service
   pxpost_input_processor.class: Heystack\Subsystem\Payment\DPS\PXPost\InputProcessor
@@ -12,21 +13,37 @@ parameters:
 
 services:
 
+  ss_orm_backend:
+    class: %ss_orm_backend.class%
+
+  dataobject_generator:
+    class: %dataobject_generator.class%
+
+  input_processor_handler:
+    class: %input_processor_handler.class%
+
+  output_processor_handler:
+    class: %output_processor_handler.class%
+
   pxfusion_service:
     class: %pxfusion_service.class%
     arguments: [ @event_dispatcher, @transaction ]
 
   pxfusion_input_processor:
     class: %pxfusion_input_processor.class%
-    arguments: [ @pxfusion_service, @dataobject_generator ]
+    arguments: [ @pxfusion_service, @storage, @state ]
 
   pxfusion_output_processor:
     class: %pxfusion_output_processor.class%
 
+  pxfusion_payment_response:
+    class: %pxfusion_payment_response.class%
+    arguments: [ [] ]
+
 
   pxpost_service:
     class: %pxpost_service.class%
-    arguments: [ %payment.class%, @event_dispatcher, @transaction ]
+    arguments: [ @event_dispatcher, @transaction ]
 
   pxpost_input_processor:
     class: %pxpost_input_processor.class%
