--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
             "Heystack": "code/"
         }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.1.x-dev"
+        }
+    },
     "minimum-stability": "dev"
 }
