--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "url": "http://packages:satis@packages.heyday.net.nz/"
         }
     ],
-    "require": {        
+    "require": {
         "php": ">=5.4.0",
         "composer/installers": "*"
     },
@@ -22,5 +22,10 @@
         },
         "classmap": ["sapphire/"]
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
