--- a/composer.json
+++ b/composer.json
@@ -4,18 +4,18 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "http://packages:satis@packages.heyday.net.nz/"
+            "url": "http://packages.heyday.net.nz/"
         }
     ],
     "require": {        
         "php": ">=5.4.0",
-        "composer/installers": "1.0.0"
+        "composer/installers": "~1.0.0"
     },
     "require-dev": {
-        "silverstripe/framework": "2.4.9",
-        "heystack/heystack": "dev-develop",
-        "heystack/ecommerce-core": "dev-develop",
-        "composer/composer": "1.0.0-alpha6",
+        "silverstripe/framework": "~2.4",
+        "heystack/heystack": "1.1.*@dev",
+        "heystack/ecommerce-core": "1.1.*@dev",
+        "symfony/class-loader": "~2.2",
         "phpmd/phpmd": "1.4.*",
         "phploc/phploc": "dev-master",
         "pdepend/pdepend": "1.1.*",
@@ -27,9 +27,13 @@
         }
     },
     "extra": {
+        "installer-paths": {
+            "sapphire": [
+                "silverstripe/framework"
+            ]
+        },
         "branch-alias": {
             "dev-master": "1.1.x-dev"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
