--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="Ecommerce Payment" default="build">
     <target name="build"
-            depends="prepare,lint,phploc,pdepend,phpmd-ci,phpcs-ci,sami,phpunit"/>
+            depends="prepare,lint,pdepend,phpmd-ci,phpcs-ci,sami,phpunit"/>
 
     <target name="build-parallel"
             depends="prepare,lint,tools-parallel,phpunit"/>
@@ -14,7 +14,6 @@
                 <antcall target="phpmd-ci"/>
             </sequential>
             <antcall target="phpcs-ci"/>
-            <antcall target="phploc"/>
         </parallel>
     </target>
 
@@ -34,9 +33,9 @@
         <mkdir dir="${basedir}/build/logs"/>
         <mkdir dir="${basedir}/build/pdepend"/>
 
-        <exec executable="changephp">
+        <!--<exec executable="changephp">
             <arg value="54"/>
-        </exec>
+        </exec>-->
 
         <exec executable="composer">
             <arg value="install"/>
@@ -60,14 +59,6 @@
                 <modified/>
             </fileset>
         </apply>
-    </target>
-
-    <target name="phploc" description="Measure project size using PHPLOC">
-        <exec executable="${basedir}/vendor/bin/phploc">
-            <arg value="--log-csv"/>
-            <arg value="${basedir}/build/logs/phploc.csv"/>
-            <arg value="code"/>
-        </exec>
     </target>
 
     <target name="pdepend" description="Calculate software metrics using PHP_Depend">
