--- a/build.xml
+++ b/build.xml
@@ -33,9 +33,9 @@
         <mkdir dir="${basedir}/build/logs"/>
         <mkdir dir="${basedir}/build/pdepend"/>
 
-        <!--<exec executable="changephp">
+        <exec executable="changephp">
             <arg value="54"/>
-        </exec>-->
+        </exec>
 
         <exec executable="composer">
             <arg value="install"/>
@@ -75,7 +75,7 @@
         <exec executable="${basedir}/vendor/bin/phpmd">
             <arg path="${basedir}/code"/>
             <arg value="text"/>
-            <arg value="${basedir}/build/phpmd.xml"/>
+            <arg value="${basedir}/phpmd.xml"/>
         </exec>
     </target>
 
@@ -84,7 +84,7 @@
         <exec executable="${basedir}/vendor/bin/phpmd">
             <arg path="${basedir}/code"/>
             <arg value="xml"/>
-            <arg value="${basedir}/build/phpmd.xml"/>
+            <arg value="${basedir}/phpmd.xml"/>
             <arg value="--reportfile"/>
             <arg value="${basedir}/build/logs/pmd.xml"/>
         </exec>
