--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
         "composer/installers": "~1.0.0"
     },
     "require-dev": {
-        "silverstripe/framework": "~2.4",
-        "heystack/heystack": "self.version",
-        "heystack/ecommerce-core": "self.version",
+        "silverstripe/framework": "~3.1@dev",
+        "heystack/heystack": "~3.0@dev",
+        "heystack/ecommerce-core": "~3.0@dev",
         "symfony/class-loader": "~2.2",
         "phpmd/phpmd": "1.4.*",
         "pdepend/pdepend": "1.1.*",
@@ -26,13 +26,9 @@
         }
     },
     "extra": {
-        "installer-paths": {
-            "sapphire": [
-                "silverstripe/framework"
-            ]
-        },
         "branch-alias": {
-            "dev-master": "2.0.x-dev",
+            "dev-master": "3.0.x-dev",
+            "dev-2.1": "2.1.x-dev",
             "dev-1.0": "1.0.x-dev"
         }
     }
