Remove use of Subsystem namespace as it is redundant

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Heystack\\Subsystem\\Payment\\": "src/"
+            "Heystack\\Payment\\": "src/"
         }
     },
     "extra": {
