--- a/config/dps_services.yml
+++ b/config/dps_services.yml
@@ -1,17 +1,17 @@
 parameters:
 
-  pxfusion_service.class: Heystack\Subsystem\Payment\DPS\PXFusion\Service
-  pxfusion_input_processor.class: Heystack\Subsystem\Payment\DPS\PXFusion\InputProcessor
-  pxfusion_output_processor.class: Heystack\Subsystem\Payment\DPS\PXFusion\OutputProcessor
+  pxfusion_service.class: Heystack\Payment\DPS\PXFusion\Service
+  pxfusion_input_processor.class: Heystack\Payment\DPS\PXFusion\InputProcessor
+  pxfusion_output_processor.class: Heystack\Payment\DPS\PXFusion\OutputProcessor
   pxfusion_output_processor.completeURL: checkout/thankyou
   pxfusion_output_processor.confirmationURL: 'checkout/confirm'
   pxfusion_output_processor.failureURL: checkout/failure
-  pxfusion_payment_response.class: Heystack\Subsystem\Payment\DPS\PXFusion\PaymentResponse
+  pxfusion_payment_response.class: Heystack\Payment\DPS\PXFusion\PaymentResponse
 
-  pxpost_service.class: Heystack\Subsystem\Payment\DPS\PXPost\Service
-  pxpost_input_processor.class: Heystack\Subsystem\Payment\DPS\PXPost\InputProcessor
-  pxpost_output_processor.class: Heystack\Subsystem\Payment\DPS\PXPost\OutputProcessor
-  pxpost_payment_response.class: Heystack\Subsystem\Payment\DPS\PXPost\PaymentResponse
+  pxpost_service.class: Heystack\Payment\DPS\PXPost\Service
+  pxpost_input_processor.class: Heystack\Payment\DPS\PXPost\InputProcessor
+  pxpost_output_processor.class: Heystack\Payment\DPS\PXPost\OutputProcessor
+  pxpost_payment_response.class: Heystack\Payment\DPS\PXPost\PaymentResponse
 
 services:
 
