--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,12 @@
         "composer/installers": "~1.0"
     },
     "require-dev": {
-        "silverstripe/framework": "~3.1@dev",
         "heystack/heystack": "~3.0@dev",
         "heystack/ecommerce-core": "~3.0@dev",
+        "silverstripe/framework": "~3.1@dev",
         "symfony/class-loader": "~2.2",
-        "phpmd/phpmd": "1.4.*",
-        "pdepend/pdepend": "1.1.*",
-        "sami/sami": "dev-master"
+        "sami/sami": "dev-master",
+        "sebastian/money": "@dev"
     },
     "autoload": {
         "psr-4": {
